--- a/backend/wumpus/templates/wumpus/board.html
+++ b/backend/wumpus/templates/wumpus/board.html
@@ -68,7 +68,7 @@
             </div>
 
             <!-- Right Side Information -->
-            <div class="right-info-container">
+            <div class="right-sidebar-wrapper">
                 <!-- Move Information Panel -->
                 <div class="move-info-panel">
                     <h4>🎯 Move Information</h4>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 
-                <!-- Recent Moves Panel -->
+                <!-- Recent Moves Panel - Separate Box -->
                 <div class="recent-moves-panel">
                     <h4>📝 Recent Moves</h4>
                     <div class="move-history-list" id="move-history-list">
